# IKS-MODEL

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  list_models.py  pyproject.toml  quickstart.py  test_run.py
.claude/: settings.local.json
configs/rag/: default.yaml
data collection/: iks_data_collector.py  iks_system_prompt.py  iks_v2_dataset_builder.py  iks_world_collector.py
data collection/iks_corpus/: metadata.json
data collection/iks_corpus/archive_org/: historyofsanskri00macduoft_raw.txt
data collection/iks_corpus/nptel/: NPTEL_Sanskrit_for_Self_Development.txt
data collection/iks_corpus/processed/: archive_aryabhatiya00arya.txt  archive_hinducostumesand00ghosrich.txt  archive_industradecomme00unkngoog.txt  archive_vastuvidya00deva.txt  concept_Karma.txt  concept_Untranslatable_Atithi_Devo_Bhava.txt  concept_Untranslatable_Dharma.txt  concept_Ātman_Hinduism.txt  festival_Holi__the_festival_of_colour.txt  festival_Navaratri.txt  lit_Amitav_Ghosh.txt  lit_Ismat_Chughtai.txt  lit_Mulk_Raj_Anand.txt  lit_Rabindranath_Tagore.txt  lit_The_God_of_Small_Things.txt  lit_U_R_Ananthamurthy.txt  myth_Arthashastra.txt  myth_Basava.txt  myth_Jataka_tales.txt  myth_Kabir.txt  myth_Puranas.txt  myth_Ramanuja.txt  myth_Ravidas.txt  myth_Tukaram.txt  myth_Yoga_Sutras_of_Patanjali.txt  nptel_NPTEL_History_of_Science_in_India.txt  nptel_NPTEL_Indian_Architecture_and_Town_Planning.txt  nptel_NPTEL_Introduction_to_Indian_Knowledge_Systems.txt  raga_Melakarta.txt  raga_Raga_Bhairavi.txt  raga_Raga_Bhimpalasi.txt  raga_Raga_Kafi.txt  raga_Raga_Malkauns.txt  raga_Raga_Todi.txt  raga_Raga_Yaman.txt  regional_Bihari_culture.txt  regional_Culture_of_Odisha.txt  regional_Culture_of_Rajasthan.txt  regional_Ghoomar.txt  regional_Manipur.txt  (+75 more)
data collection/iks_corpus/wikipedia/: Abhinaya.txt  Advaita_Vedanta.txt  Ajanta_Caves.txt  Aryabhata.txt  Aryabhatiya.txt  Ashoka.txt  Ashtadhyayi.txt  Ashtanga_Hridayam.txt  Atharvaveda.txt  Banarasi_sari.txt  Bandhani.txt  Bhagavad_Gita.txt  Bharata_Muni.txt  Bharatanatyam.txt  Bhaskara_II.txt  Brahma_Sutras.txt  Brahmagupta.txt  Brahmasphutasiddhanta.txt  Brihadeeswarar_Temple.txt  Buddhism_in_India.txt  Carnatic_music.txt  Charaka.txt  Charaka_Samhita.txt  Chikankari.txt  Chola_dynasty.txt  Devanagari.txt  Dharma.txt  Dhrupad.txt  Dravidian_architecture.txt  Dvaita_Vedanta.txt  Edicts_of_Ashoka.txt  Ellora_Caves.txt  Gandhara_art.txt  Gupta_Empire.txt  Hampi.txt  Hindu_temple_architecture.txt  Hindustani_classical_music.txt  History_of_agriculture_in_the_Indian_subcontinent.txt  Ikat.txt  Indian_agriculture.txt  (+91 more)
data collection/iks_corpus/world/: Adi_Shankara.txt  Amarnath.txt  Andal.txt  (+33 more)
data/documents/: archive_arthashastra00kaut.txt  archive_hindumusicfromva00popu.txt  archive_historyofindianma00dattrich.txt  archive_historyofsanskri00macduoft.txt  archive_indianarchitect00haveuoft.txt  archive_natyasastra00bharuoft.txt  chola_temples.txt  concept_Brahman.txt  concept_Maya_religion.txt  concept_Moksha.txt  concept_Untranslatable_Ahimsa.txt  concept_Untranslatable_Jugaad.txt  concept_Untranslatable_Sthitaprajna.txt  concept_Vairagya.txt  festival_Diwali__the_festival_of_light.txt  festival_Krishna_Janmashtami.txt  festival_Kumbh_Mela__the_worlds_largest_human_gathering.txt  festival_Onam__Keralas_harvest_home.txt  indian_mathematics.txt  lit_Gitanjali.txt  lit_Kamala_Surayya.txt  lit_Premchand.txt  lit_Saadat_Hasan_Manto.txt  lit_Subramania_Bharati.txt  lit_Vikram_Seth.txt  mauryan_empire.txt  melakarta_ragas.txt  myth_Devi_Mahatmya.txt  myth_Kalidasa.txt  myth_Kural.txt  myth_Mahabharata.txt  myth_Mirabai.txt  myth_Panchatantra.txt  myth_Panchatantra__wisdom_through_animals.txt  myth_Ramayana.txt  myth_Shiva_Purana.txt  myth_The_Mahabharata__every_human_dilemma.txt  myth_The_Ramayana__dharma_in_action.txt  myth_Thiruvalluvar.txt  myth_Vishnu_Purana.txt  (+132 more)
data/eval/: adversarial_questions.json  hand_written_questions.json  iks_benchmark_gold.json  v1_regression_results.jsonl  v2_regression_tests.jsonl
doc/: Comparision, value & gap.md  idea.md
docs/: README.md
docs/adr/: 0001-use-llamaindex-for-rag.md  0002-gemma3-4b-default-model.md  0003-chromadb-over-qdrant.md  0004-multilingual-e5-embeddings.md  0005-switch-to-gemini.md  0006-pivot-to-mistral-7b.md  0007-resolve-llama3-template-mismatch.md  TEMPLATE.md
docs/ai-context/: bridge.md  conventions.md
docs/architecture/: hybrid-architecture.md  overview.md  rag-pipeline.md
docs/guides/: data-sources.md  deployment.md  evaluation_framework.md  huggingface_model_card.md  kaggle_training_notebook.md  runpod_setup.md  setup.md
docs/project/: bharat_pitch_deck.md  changelog.md  dataset-governance.md  model_specification.md  next-tasks.md  roadmap.md  v1-model-report.md
docs/research/: comparison-value-and-gap.md  idea.md  indian-ai-landscape.html  rag-frameworks-comparison.html
scripts/: verify_audit.py
scripts/data/: clean_dataset.py  download_sample_docs.py  generate_expanded_qa.py  generate_qa_pairs.py  iks_world_collector.py  tag_documents.py  upload_dataset.py  validate_dataset.py
scripts/eval/: evaluate_constraints.py  generate_benchmark.py  run_benchmark.py
scripts/train/: unsloth_finetune.py
src/iks_rag/: __init__.py  config.py  rag_system.py
tests/unit/: conftest.py  test_config.py  test_eval.py  test_llm.py  test_loaders.py  test_prompts.py  test_rag_system.py  test_retrieval.py  test_ui.py
(+16 files in other folders)
